  * Use canonical and secure repository URIs in
    debian/upstream/metadata.
  * Downgrade certainty of e-mail addresses in configure-reported bug
    submit addresses.
  * Fix reporting of fixed tag out-of-date-copyright-format-uri. Thanks,
    Mattia Rizzolo.
  * When vcswatch only has an updated Vcs-Git URL but not a Vcs-Browser
    field, automatically attempt to determine Vcs-Browser URL.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 05 Dec 2019 22:21:34 +0000

lintian-brush (0.44) unstable; urgency=medium

  * Cope with continuations at the end of debian/rules files.
  * Add fixer for debian-rules-not-executable.
  * Add (for now) hidden --compat-release option.
  * Don't strip comments when minimizing upstream keys. Closes: #942719
  * Report lintian tag fixed for tab-in-licence-text.
  * Add fixer for wrong-section-according-to-package-name.
  * Look for [dch] section in gbp.conf when guessing whether to update
    changelog.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 05 Dec 2019 03:22:22 +0000

lintian-brush (0.43) unstable; urgency=medium

  * Add fixer for font-package-not-multi-arch-foreign.
  * Actually install lintian-brush.conf(5) manpage.
  * Don't drop unnecessary overrides unless making other changes.
  * Disable credentials prompting when probing VCS URLs. Closes: #942648

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 28 Nov 2019 08:43:50 +0000

lintian-brush (0.41) unstable; urgency=medium

  * Probe Homepage URL for VCS attributes.
  * Fix finding of upstream repository for SourceForge projects.
  * Pick up GitHub issues locations from README.
  * Don't leave behind backup files when comparing uscan watch files.
  * dh-quilt-addon-but-quilt-source-format: only drop quilt if package
    is on the 3.0 (quilt) format.
  * Add lintian-brush.conf(5) manpage.
  * Add an update-changelog variable.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 27 Nov 2019 04:36:35 +0000

lintian-brush (0.40) unstable; urgency=medium
